swagger - auth.js completo
